--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ osx: &osx
    language: generic
 matrix:
    include:
-      - <<: *linux
-        env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7
+      # - <<: *linux
+      #   env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=lasote/conangcc7
 
       - <<: *osx
         osx_image: xcode9.4
