--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
 
       - <<: *osx
         osx_image: xcode9.4
-        env: CONAN_APPLE_CLANG_VERSIONS=9.1
+        env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_REFERENCE=xtensor/0.20.8
 
 install:
   - chmod +x .ci/install.sh
